--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@hookform/resolvers": "^3.6.0",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0"
   },
